# ThickAnalysis

./: CMakeLists.txt  result.txt
include/: Analysis_1780.h  Count.h  Logic.h  Out.h  parameter.h  readsql.h  somefounction.h
src/: Analysis_1780.cpp  Count.cpp  Logic.cpp  Out.cpp  mian.cpp  parameter.cpp  readsql.cpp
